--- a/pathfinder/RunMserver.bat.in
+++ b/pathfinder/RunMserver.bat.in
@@ -10,18 +10,18 @@ set MOD_PATH=%MOD_PATH%;%builddir%\runtime
 set MOD_PATH=%MOD_PATH%;%builddir%\modules\pftijah\.libs
 set MOD_PATH=%MOD_PATH%;%builddir%\modules\pftijah
 
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\scripts
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\scripts\tools
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\plain\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\plain
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\contrib\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\contrib
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\calibrator\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\calibrator
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\mapi\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\mapi
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\mnetcdf\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\modules\mnetcdf
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\scripts
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb4\scripts\tools
 
 set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\compiler;%PATH%
