--- a/monetdb4/RunMserver.bat.in
+++ b/monetdb4/RunMserver.bat.in
@@ -3,24 +3,24 @@
 setlocal
 
 set buildbase=@XBUILD@
-set builddir=%buildbase%\MonetDB4
+set builddir=%buildbase%\monetdb4
 
-set MOD_PATH=%builddir%\src\modules\plain\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\plain
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\contrib\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\contrib
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\calibrator\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\calibrator
-set MOD_PATH=%MOD_PATH%;%builddir%\src\mapi\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\mapi
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\mnetcdf\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\mnetcdf
+set MOD_PATH=%builddir%\modules\plain\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\plain
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\contrib\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\contrib
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\calibrator\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\calibrator
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\mapi\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\mapi
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\mnetcdf\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\mnetcdf
 set MOD_PATH=%MOD_PATH%;%builddir%\scripts
 set MOD_PATH=%MOD_PATH%;%builddir%\scripts\tools
 
 set PATH=%MOD_PATH%;%PATH%
-set PATH=%builddir%\src\monet;%PATH%
-set PATH=%builddir%\src\tools;%PATH%
+set PATH=%builddir%\monet;%PATH%
+set PATH=%builddir%\tools;%PATH%
 
 Mserver.exe "--config=%builddir%\conf\MonetDB.conf" --set "monet_mod_path=%MOD_PATH%" %*
 
