--- a/monetdb5/RunMserver.bat.in
+++ b/monetdb5/RunMserver.bat.in
@@ -3,24 +3,24 @@
 setlocal
 
 set buildbase=@XBUILD@
-set builddir=%buildbase%\MonetDB5
+set builddir=%buildbase%\monetdb5
 
-set MOD_PATH=%builddir%\src\compiler\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\compiler
-set MOD_PATH=%MOD_PATH%;%builddir%\src\optimizer\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\optimizer
-set MOD_PATH=%MOD_PATH%;%builddir%\src\scheduler\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\scheduler
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\atoms\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\atoms
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\kernel\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\kernel
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\mal\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\mal
+set MOD_PATH=%builddir%\compiler\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\compiler
+set MOD_PATH=%MOD_PATH%;%builddir%\optimizer\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\optimizer
+set MOD_PATH=%MOD_PATH%;%builddir%\scheduler\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\scheduler
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\atoms\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\atoms
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\kernel\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\kernel
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\mal\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\mal
 
 set PATH=%MOD_PATH%;%PATH%
-set PATH=%builddir%\src\mal;%PATH%
-set PATH=%builddir%\src\tools;%PATH%
+set PATH=%builddir%\mal;%PATH%
+set PATH=%builddir%\tools;%PATH%
 
 mserver5.exe "--config=%builddir%\conf\monetdb5.conf" --set "monet_mod_path=%MOD_PATH%" %*
 
