--- a/pathfinder/RunMapprove.bat.in
+++ b/pathfinder/RunMapprove.bat.in
@@ -8,7 +8,7 @@ goto end
 
 setlocal
 
-rem default back end is MonetDB4
+rem default back end is monetdb4
 set V=4
 if "%1" == "-4" set V=4& shift
 if "%1" == "-5" set V=5& shift
