--- a/pathfinder/RunMapprove.in
+++ b/pathfinder/RunMapprove.in
@@ -29,7 +29,7 @@ builddir="${buildbase}/pathfinder"
 # make sure srcdir contains absolute path name
 srcdir=`cd '@srcdir@'; pwd`
 
-# default back-end is MonetDB4
+# default back-end is monetdb4
 V=4
 for arg
 do
