--- a/sql/RunMserver.bat.in
+++ b/sql/RunMserver.bat.in
@@ -5,27 +5,27 @@ setlocal
 set buildbase=@XBUILD@
 set builddir=%buildbase%\sql
 
-set MOD_PATH=%builddir%\src\backends\monet5\.libs
-set MOD_PATH=%MOD_PATH%;%builddir%\src\backends\monet5\.libs
+set MOD_PATH=%builddir%\backends\monet5\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\backends\monet5\.libs
 
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\.libs
-set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\compiler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\compiler
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\optimizer\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\optimizer
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\scheduler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\scheduler
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\modules\atoms\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\modules\atoms
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\modules\kernel\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\modules\kernel
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\modules\mal\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\monetdb5\modules\mal
 
 set PATH=%MOD_PATH%;%PATH%
-set PATH=%builddir%\src\server;%PATH%
-set PATH=%builddir%\src\storage\bat;%PATH%
-set PATH=%builddir%\src\common;%PATH%
-set PATH=%builddir%\src\backends\monet5;%PATH%
+set PATH=%builddir%\server;%PATH%
+set PATH=%builddir%\storage\bat;%PATH%
+set PATH=%builddir%\common;%PATH%
+set PATH=%builddir%\backends\monet5;%PATH%
 
 mserver5.exe --set "monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" %1 %2 %3 %4 %5 %6 %7 %8 %9
 
