--- a/sql/RunMserver.in
+++ b/sql/RunMserver.in
@@ -21,9 +21,9 @@ buildbase=@QXBUILD@
 builddir="${buildbase}/sql"
 
 # where compiled SQL modules are to be found
-MOD_PATH="${builddir}/src/backend/monet5/.libs:${builddir}/src/backend/monet5"
+MOD_PATH="${builddir}/backend/monet5/.libs:${builddir}/backend/monet5"
 
-# where compiled MonetDB5 modules are to be found
-MOD_PATH="${MOD_PATH}:${buildbase}/MonetDB5/src/compiler/.libs:${buildbase}/MonetDB5/src/compiler:${buildbase}/MonetDB5/src/optimizer/.libs:${buildbase}/MonetDB5/src/optimizer:${buildbase}/MonetDB5/src/scheduler/.libs:${buildbase}/MonetDB5/src/scheduler:${buildbase}/MonetDB5/src/modules/atoms/.libs:${buildbase}/MonetDB5/src/modules/atoms:${buildbase}/MonetDB5/src/modules/kernel/.libs:${buildbase}/MonetDB5/src/modules/kernel:${buildbase}/MonetDB5/src/modules/mal/.libs:${buildbase}/MonetDB5/src/modules/mal"
+# where compiled monetdb5 modules are to be found
+MOD_PATH="${MOD_PATH}:${buildbase}/monetdb5/compiler/.libs:${buildbase}/monetdb5/compiler:${buildbase}/monetdb5/optimizer/.libs:${buildbase}/monetdb5/optimizer:${buildbase}/monetdb5/scheduler/.libs:${buildbase}/monetdb5/scheduler:${buildbase}/monetdb5/modules/atoms/.libs:${buildbase}/monetdb5/modules/atoms:${buildbase}/monetdb5/modules/kernel/.libs:${buildbase}/monetdb5/modules/kernel:${buildbase}/monetdb5/modules/mal/.libs:${buildbase}/monetdb5/modules/mal"
 
 exec mserver5 --set monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" ${1+"$@"}
