--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -45,28 +45,28 @@ done
 
 case "$V" in
 4)
-# where compiled MonetDB4 modules are to be found
-for d in src/modules/plain src/modules/contrib src/modules/calibrator src/mapi @HAVE_NETCDF_TRUE@ src/modules/mnetcdf
+# where compiled monetdb4 modules are to be found
+for d in modules/plain modules/contrib modules/calibrator modules/mapi @HAVE_NETCDF_TRUE@ modules/mnetcdf
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/MonetDB4/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}${buildbase}/monetdb4/$d/.libs:${builddir}/$d:"
 done
-MOD_PATH="${MOD_PATH}${srcdir}/../MonetDB4/scripts/tools"
+MOD_PATH="${MOD_PATH}${srcdir}/../monetdb4/scripts/tools"
 ;;
 5)
-# where compiled MonetDB5 modules are to be found
-for d in src/compiler src/optimizer src/scheduler src/modules/atoms src/modules/kernel src/modules/mal src/modules/mal/crackers src/modules/mal/rdf
+# where compiled monetdb5 modules are to be found
+for d in compiler optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/MonetDB5/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}${buildbase}/monetdb5/$d/.libs:${builddir}/$d:"
 	# enable auto-loading of modules before `make install`
-	mkdir -p ${buildbase}/MonetDB5/$d/autoload
-	cp -f ${srcdir}/../MonetDB5/$d/[0-9][0-9]_*.mal ${buildbase}/MonetDB5/$d/autoload/ 2>/dev/null
+	mkdir -p ${buildbase}/monetdb5/$d/autoload
+	cp -f ${srcdir}/../monetdb5/$d/[0-9][0-9]_*.mal ${buildbase}/monetdb5/$d/autoload/ 2>/dev/null
 done
 ;;
 esac
 
 # enhance various paths to find our stuff
 libpath="${MOD_PATH}"
-PATH="${buildbase}/MonetDB$V/src/tools:${buildbase}/testing/src:$PATH"
+PATH="${buildbase}/monetdb$V/tools:${buildbase}/testing/src:$PATH"
 export PATH
 
 PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
