--- a/monetdb4/conf/MonetDB.conf.in
+++ b/monetdb4/conf/MonetDB.conf.in
@@ -24,7 +24,7 @@
 
 # ----------------------------------------------------------- #
 # Please keep the comments below aligned with the defaults in #
-# MonetDB/src/common/monet_options.mx                         #
+# common/options/monet_options.mx                             #
 # ----------------------------------------------------------- #
 
 # Where MonetDB is installed
@@ -37,7 +37,7 @@ datadir=@Xdatadir@
 
 # All databases are stored as a directory under the directory given
 # below.  Use this value to change the overall location of your data.
-gdk_dbfarm=@Xlocalstatedir@@DIRSEP@MonetDB4@DIRSEP@dbfarm
+gdk_dbfarm=@Xlocalstatedir@@DIRSEP@monetdb4@DIRSEP@dbfarm
 
 # MonetDB can only handle one database at a time.  You can specify the
 # name of the database to use below.  Note that you can use multiple
@@ -117,7 +117,7 @@ monet_prompt=MonetDB>
 # Where do the MonetDB modules reside?
 # The first directory contains MIL modules, and either the second or
 # third (depending on the system) the C modules.
-monet_mod_path=@Xlibdir@@DIRSEP@MonetDB4@PATHSEP@@Xlibdir@@DIRSEP@MonetDB4@DIRSEP@lib@PATHSEP@@Xlibdir@@DIRSEP@MonetDB4@DIRSEP@bin
+monet_mod_path=@Xlibdir@@DIRSEP@monetdb4@PATHSEP@@Xlibdir@@DIRSEP@monetdb4@DIRSEP@lib@PATHSEP@@Xlibdir@@DIRSEP@monetdb4@DIRSEP@bin
 # Start Mserver in daemon mode, or start with MIL interactive
 # interface?
 #monet_daemon=no
@@ -164,10 +164,10 @@ xrpc_open=true
 xrpc_options=""
 
 # Root directory of files that could be served by the XRPC HTTP server
-#xrpc_docroot="@Xdatadir@@DIRSEP@MonetDB@DIRSEP@xrpc"
+#xrpc_docroot="@Xdatadir@@DIRSEP@monetdb@DIRSEP@xrpc"
 
 # IP addresses or hostname separated by ';' who can execute scripts in
-# <datadir>/MonetDB/xrpc/admin/
+# <datadir>/monetdb/xrpc/admin/
 xrpc_admin="http://127.0.0.1;127.0.0.1;http://localhost;localhost"
 
 # IP addresses or hostname separated by ';' who can retrieve XML
@@ -176,14 +176,9 @@ xrpc_admin="http://127.0.0.1;127.0.0.1;http://localhost;localhost"
 xrpc_user="http://127.0.0.1;127.0.0.1;http://localhost;localhost"
 
 # url prefixes of trusted modules separated by ';'
-xrpc_trusted="http://monetdb.cwi.nl;http://127.0.0.1;http://localhost;@Xexec_prefix@@DIRSEP@share@DIRSEP@MonetDB@DIRSEP@xrpc@DIRSEP@export"
+xrpc_trusted="http://monetdb.cwi.nl;http://127.0.0.1;http://localhost;@Xexec_prefix@@DIRSEP@share@DIRSEP@monetdb@DIRSEP@xrpc@DIRSEP@export"
 
 # standoff annotation XPath extension
 #standoff_ns=
 #standoff_start=start
 #standoff_end=end
-
-# ----------------------------------------------------------- #
-# Please keep the comments above aligned with the defaults in #
-# MonetDB/src/common/monet_options.mx                         #
-# ----------------------------------------------------------- #
