Get to compile again on Windows. libmoptions is a NOINST library which is included in both the libmapi and libbat DLLs.  This means it should export its symbols only when the header file is included in any of those libraries, and it should not be listed on the linker commandline when either of those libraries is already mentioned. Also removed some apparently unneeded libstreams.

--- a/clients/mapiclient/Makefile.ag
+++ b/clients/mapiclient/Makefile.ag
@@ -25,9 +25,9 @@ lib_mcutil = {
 
 bin_mclient = {
 	SOURCES = mclient.c ReadlineTools.c
-	LIBS = libmcutil ../mapilib/libmapi $(READLINE_LIBS) \
+	LIBS = libmcutil ../mapilib/libmapi \
 		../../common/stream/libstream \
-		../../common/options/libmoptions \
+		$(READLINE_LIBS) \
 		$(curl_LIBS) $(LTLIBICONV)
 }
 
@@ -35,7 +35,6 @@ bin_msqldump = {
 	SOURCES = msqldump.c
 	LIBS = libmcutil ../mapilib/libmapi \
 		../../common/stream/libstream \
-		../../common/options/libmoptions \
 		$(curl_LIBS)
 }
 
@@ -43,7 +42,6 @@ bin_stethoscope = {
 	SOURCES = stethoscope.c
 	LIBS = libmcutil ../mapilib/libmapi \
 		../../common/stream/libstream \
-		../../common/options/libmoptions \
 		$(curl_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS)
 }
 
